[JSC] `Array.prototype.toReversed` should fill holes with undefined https://bugs.webkit.org/show_bug.cgi?id=285254

Reviewed by Yusuke Suzuki.

https://commits.webkit.org/287431@main rewrote `Array.prototype.toReversed`
in C++. According to the spec[1], `toReversed` should fill holes with `undefined`,
but this C++ implementation sometimes leaves those holes intact.

This commit fixes that issue by making the function bail out from the fast path
when the array contains any holes.

[1]: https://tc39.es/ecma262/#sec-array.prototype.toreversed

* Source/JavaScriptCore/runtime/JSArray.cpp:
(JSC::JSArray::fastToReversed):

Canonical link: https://commits.webkit.org/288339@main